# rusty

./: .gitignore  Cargo.toml  README.md
crates/rusty-cli/: Cargo.toml
crates/rusty-cli/src/: main.rs  output.rs
crates/rusty-cli/src/commands/: build.rs  init.rs  inspect.rs  install.rs  invoke.rs  list.rs  mod.rs  trace.rs
crates/rusty-cli/tests/: cli.rs
crates/rusty-core/: Cargo.toml
crates/rusty-core/src/: action.rs  capability.rs  error.rs  invocation.rs  lib.rs  manifest.rs  policy.rs  schema.rs  trace.rs
crates/rusty-engine/: Cargo.toml
crates/rusty-engine/src/: host_impl.rs  invoke.rs  lib.rs  plugin.rs  registry.rs  runtime.rs  store.rs
crates/rusty-engine/tests/: integration.rs
crates/rusty-plugin-sdk/: Cargo.toml
crates/rusty-plugin-sdk/src/: lib.rs
crates/rusty-policy/: Cargo.toml
crates/rusty-policy/src/: lib.rs
crates/rusty-wit/: Cargo.toml
crates/rusty-wit/src/: lib.rs
examples/plugins/hello-world/: Cargo.toml  hello-world.wasm  rusty-plugin.toml
examples/plugins/hello-world/src/: lib.rs
tests/agent-sdk/: package-lock.json  package.json  test-rusty-agent.mjs
