[workspace]
resolver = "2"
members = [
    "crates/rusty-core",
    "crates/rusty-wit",
    "crates/rusty-engine",
    "crates/rusty-policy",
    "crates/rusty-cli",
]
exclude = [
    "crates/rusty-plugin-sdk",
    "examples/plugins/hello-world",
]

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
jsonschema = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
wasmtime = { version = "43", features = ["component-model", "async", "cranelift"] }
wasmtime-wasi = "43"
