[package]
name = "rusty-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rusty"
path = "src/main.rs"

[dependencies]
rusty-core = { path = "../rusty-core" }
rusty-engine = { path = "../rusty-engine" }
rusty-policy = { path = "../rusty-policy" }
anyhow = { workspace = true }
clap = { workspace = true }
home = "0.5"
owo-colors = { version = "4", features = ["supports-colors"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
strip-ansi-escapes = "0.2"
tempfile = "3"
