[package]
name = "rusty-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
rusty-core = { path = "../rusty-core" }
rusty-wit = { path = "../rusty-wit" }
rusty-policy = { path = "../rusty-policy" }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }

[dev-dependencies]
tempfile = "3"
